--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-cli": "^2.9.6",
+    "vue-round-slider": "^1.0.1",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.5"
   },
